[gd_scene load_steps=2 format=3 uid="uid://c57q4phhvqvpp"]

[ext_resource type="Script" path="res://assets/scripts/managers/pause_menu_manager.gd" id="1_s2ceo"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s2ceo")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 640.0
offset_top = 296.0
offset_right = -640.0
offset_bottom = -296.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Resume Game" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Resume Game"

[node name="Options" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Options"

[node name="Main Menu" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Main Menu"

[node name="Quit Game" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Quit Game"

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Resume Game" to="." method="resume_game"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Main Menu" to="." method="back_to_main_menu"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Quit Game" to="." method="quit_game"]
